[JBVFS-168, JBVFS-169]; add logging to temp handling, fix VF::toURL bug with spaces.